force-app/main/default/objects/accessnow__ACNW_User_Permission__c/fields/accessnow__Permission__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Permission__c</fullName>
    <label>Permission</label>
    <referenceTo>accessnow__ACNW_Permission__c</referenceTo>
    <relationshipLabel>User Permissions</relationshipLabel>
    <relationshipName>User_Permissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>