force-app/main/default/objects/accessnow__ACNW_User_Permission__c/fields/accessnow__Permission_Count__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Permission_Count__c</fullName>
    <description>Permission Count to keep track of how many times an approved permission set is used by an user.</description>
    <inlineHelpText>Permission Count to keep track of how many times an approved permission set is used by an user.</inlineHelpText>
    <label>Permission Count</label>
    <summaryForeignKey>accessnow__ACNW_Request_Permission__c.accessnow__User_Permission__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>