force-app/main/default/objects/accessnow__ACNW_User_Permission__c/fields/accessnow__Permission_Name__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Permission_Name__c</fullName>
    <description>Permission Name from related Master Object row</description>
    <formula>accessnow__Permission__r.accessnow__Name__c</formula>
    <label>Permission Name</label>
    <type>Text</type>
</CustomField>