force-app/main/default/objects/accessnow__ACNW_User_Permission__c/fields/accessnow__Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>accessnow__Unique_Key__c</fullName>
    <label>Unique Key</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>