force-app/main/default/objects/accessnow__ACNW_User_Permission__c/fields/accessnow__User__c.field-meta.xml
<CustomField>
    <fullName>accessnow__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Permissions</relationshipName>
    <type>Lookup</type>
</CustomField>