force-app/main/default/objects/accessnow__ACNW_User_Permission__c/validationRules/accessnow__User_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>accessnow__User_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>isblank(accessnow__User__c)</errorConditionFormula>
    <errorDisplayField>accessnow__User__c</errorDisplayField>
    <errorMessage>User is required</errorMessage>
</ValidationRule>