force-app/main/default/objects/accessnow__ACNW_User_Permission__c/listViews/accessnow__All.listView-meta.xml
<ListView>
    <fullName>accessnow__All</fullName>
    <columns>NAME</columns>
    <columns>accessnow__Permission__c</columns>
    <columns>accessnow__Permission_Name__c</columns>
    <columns>accessnow__User__c</columns>
    <columns>accessnow__Permission_Count__c</columns>
    <columns>accessnow__Unique_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>